--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
       <nav class="nav-bar">
         <div class="logo">
-          <img src="/B12A02-Responsive-Flowers/assets/logo.png" alt="Website Logo">
+          <img src="/assets/logo.png" alt="Website Logo">
         </div>
         <ul class="icon-container">
           <li class=""><a class="home" href="">Home</a></li>
@@ -25,7 +25,7 @@
         <h1 class="Title Orange">FLOWERS</h1>
         <p class="banner-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
        </div>
-       <img class="banner-image" src="/B12A02-Responsive-Flowers/assets/hero-flower.png" alt="flowers">
+       <img class="banner-image" src="/assets/hero-flower.png" alt="flowers">
       </section>
     </header>
     <main class="main">
@@ -35,64 +35,72 @@
        </div>
        <div class="card-container">
         <div class="card1">
-          <img class="item-pic" src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
           <button class="sale-button">ADD TO CART</button>
         </div>
         <div class="card2">
-          <img class="item-pic" src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
           <button class="sale-button">ADD TO CART</button>
         </div>
         <div class="card3">
-          <img class="item-pic" src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
           <button class="sale-button">ADD TO CART</button>
         </div>
         <div class="card4">
-          <img class="item-pic" src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
           <button class="sale-button">ADD TO CART</button>
         </div>
         <div class="card5">
-          <img class="item-pic" src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
           <button class="sale-button">ADD TO CART</button>
         </div>
         <div class="card6">
-          <img class="item-pic" src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
           <button class="sale-button">ADD TO CART</button>
         </div>
         <div class="card7">
-          <img class="item-pic" src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
           <button class="sale-button">ADD TO CART</button>
         </div>
         <div class="card8">
-          <img class="item-pic" src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
           <button class="sale-button">ADD TO CART</button>
         </div> 
        </div>
-       <section>
-        <div class="text">
-
+       <section class="Flower-section">
+        <div class="flower-text">
+            <h1 class="Title Flower-title">Flower & Plants Lover</h1>
+            <ul class="Flower-list">
+              <li class="Flower-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+              <li class="Flower-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+              <li class="Flower-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+            </ul>
         </div>
         <div class="img">
-
+          <img class="Flower-image" src="/assets/flower-store.png" alt="Flower store image">
+          <img class="Badge" src="/assets/trusted-badge.png" alt="badge">
         </div>
        </section>
        <section class="latest">
-
+          <div class="latest-text">
+            <h1><span>Latest</span> Deals</h1>
+          </div>
        </section>
        <section class="search">
         
