Added footer section and script for button

--- a/index.html
+++ b/index.html
@@ -39,49 +39,49 @@
           <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
-          <button class="sale-button">ADD TO CART</button>
+          <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card2">
           <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
-          <button class="sale-button">ADD TO CART</button>
+          <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card3">
           <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
-          <button class="sale-button">ADD TO CART</button>
+          <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card4">
           <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
-          <button class="sale-button">ADD TO CART</button>
+          <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card5">
           <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
-          <button class="sale-button">ADD TO CART</button>
+          <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card6">
           <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
-          <button class="sale-button">ADD TO CART</button>
+          <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card7">
           <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
-          <button class="sale-button">ADD TO CART</button>
+          <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card8">
           <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name">Lily Blossom</h3>
           <h3 class="price">20 USD</h3>
-          <button class="sale-button">ADD TO CART</button>
+          <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div> 
        </div>
        <section class="Flower-section">
@@ -128,8 +128,34 @@
         </div> 
        </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+       <div class="left-side">
+        <img class="footer-logo" src="/assets/logo.png">
+        <p class="footer-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+       </div>
+       <div class="middle-side">
+        <a class="link" href="">Home</a>
+        <a class="link" href="">About Us</a>
+        <a class="link" href="">Blog</a>
+        <a class="link" href="">FAQ</a>
+        <a class="link" href="">Contact Us</a>
+        <a class="link" href="">Features</a>
+        <a class="link" href="">Pricing</a>
+        <a class="link" href="">Privacy Policy</a>
+        <a class="link" href="">Terms of Service</a>
+        <a class="link" href="">help Center</a>
+       </div>
+       <div class="right-side">
+        <img class="footer-img" src="/assets/icon-linkedin.png">
+        <img class="footer-img" src="/assets/icon-twitter.png">
+        <img class="footer-img" src="/assets/icon-facebook.png">
+        <img class="footer-img" src="/assets/icon-youtube.png">
+       </div>
     </footer>
+    <script>
+      function addToCart() {
+        alert("Flower Added to Cart");
+      }
+    </script>
 </body>
 </html>
