added final tweaks

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Flower shop</title>
 </head>
 <body>
@@ -22,7 +23,9 @@
           <li class=""><a class="home" href="">Home</a></li>
           <li class=""><a class="icon" href="">Shop</a></li>
           <li class=""><a class="icon" href="">About Us</a></li>
-          <li class=""><a class="cart" href="">Cart</a></li>
+          
+          <li class="cart-icon"> <i class="fas fa-shopping-cart"></i> <a class="cart" href="">Cart($56)</a></li>
+         
         </ul>
       </nav>
       <section class="banner">
