--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="nav-bar">
         <div class="logo">
-          <img class="logo" src="/assets/logo.png" alt="Website Logo">
+          <img class="logo" src="assets/logo.png" alt="Website Logo">
         </div>
         <ul class="icon-container">
           <li class=""><a class="home" href="">Home</a></li>
@@ -34,7 +34,7 @@
         <h1 class="Title Orange noto-serif">FLOWERS</h1>
         <p class="banner-text inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
        </div>
-       <img class="banner-image" src="/assets/hero-flower.png" alt="flowers">
+       <img class="banner-image" src="assets/hero-flower.png" alt="flowers">
       </section>
     </header>
     <main class="main">
@@ -44,49 +44,49 @@
        </div>
        <div class="card-container">
         <div class="card1">
-          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name inter">Lily Blossom</h3>
           <h3 class="price inter">20 USD</h3>
           <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card2">
-          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name inter">Lily Blossom</h3>
           <h3 class="price inter">20 USD</h3>
           <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card3">
-          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name inter">Lily Blossom</h3>
           <h3 class="price inter">20 USD</h3>
           <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card4">
-          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name inter">Lily Blossom</h3>
           <h3 class="price inter">20 USD</h3>
           <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card5">
-          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name inter">Lily Blossom</h3>
           <h3 class="price inter">20 USD</h3>
           <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card6">
-          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name inter">Lily Blossom</h3>
           <h3 class="price inter">20 USD</h3>
           <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card7">
-          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name inter">Lily Blossom</h3>
           <h3 class="price inter">20 USD</h3>
           <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
         </div>
         <div class="card8">
-          <img class="item-pic" src="/assets/sample-flower-image.png" alt="flower for sale">
+          <img class="item-pic" src="assets/sample-flower-image.png" alt="flower for sale">
           <h4 class="item-name inter">Lily Blossom</h3>
           <h3 class="price inter">20 USD</h3>
           <button onclick="addToCart()" class="sale-button">ADD TO CART</button>
@@ -102,8 +102,8 @@
             </ul>
         </div>
         <div class="img">
-          <img class="Flower-image" src="/assets/flower-store.png" alt="Flower store image">
-          <img class="Badge" src="/assets/trusted-badge.png" alt="badge">
+          <img class="Flower-image" src="assets/flower-store.png" alt="Flower store image">
+          <img class="Badge" src="assets/trusted-badge.png" alt="badge">
         </div>
        </section>
        <section class="latest">
@@ -113,16 +113,16 @@
           </div>
           <div class="latest-img-container">
            <div class="left-img"> 
-            <img class="latest-img" src="/assets/deal-bloom.png">
+            <img class="latest-img" src="assets/deal-bloom.png">
             <h2 class="img-text-bloom inter">60% Off | Bloom Plant</h2>
             <P class="img-text-bloom-underline inter">Shop Now</P>
             
-            <img class="latest-img" src="/assets/deal-ana.png">
+            <img class="latest-img" src="assets/deal-ana.png">
             <h2 class="img-text-ana inter">30% Off | Ana Plant</h2>
             <P class="img-text-ana-underline inter">Shop Now</P>
 
            </div> 
-            <img class="latest-img" src="/assets/deal-zabo.png">
+            <img class="latest-img" src="assets/deal-zabo.png">
             <h2 class="img-text-zabo inter">25% Off | Zabo Plant</h2>
             <P class="img-text-zabo-underline inter">Shop Now</P>
           </div>
@@ -138,7 +138,7 @@
     </main>
     <footer class="footer">
        <div class="left-side">
-        <img class="footer-logo" src="/assets/logo.png">
+        <img class="footer-logo" src="assets/logo.png">
         <p class="footer-text inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
        </div>
        <div class="middle-side">
@@ -154,10 +154,10 @@
         <a class="link inter" href="">help Center</a>
        </div>
        <div class="right-side">
-        <img class="footer-img" src="/assets/icon-linkedin.png">
-        <img class="footer-img" src="/assets/icon-twitter.png">
-        <img class="footer-img" src="/assets/icon-facebook.png">
-        <img class="footer-img" src="/assets/icon-youtube.png">
+        <img class="footer-img" src="assets/icon-linkedin.png">
+        <img class="footer-img" src="assets/icon-twitter.png">
+        <img class="footer-img" src="assets/icon-facebook.png">
+        <img class="footer-img" src="assets/icon-youtube.png">
        </div>
     </footer>
     <script>
